--- a/src/scss/components/_line.scss
+++ b/src/scss/components/_line.scss
@@ -17,3 +17,10 @@
         margin-left: -23px;
     }
 }
+
+@media (max-width: 991px) {
+    .line {
+        width: 2px;
+        margin-left: -16.5px;
+    }
+}
