--- a/src/scss/components/_addTask.scss
+++ b/src/scss/components/_addTask.scss
@@ -8,7 +8,7 @@
     border-radius: 50%;
 
     background: #E0E0E0;
-    box-shadow: -5px 5px 10px rgba(202, 202, 202, 0.2), 5px -5px 10px rgba(202, 202, 202, 0.2), -5px -5px 10px rgba(246, 246, 246, 0.9), 5px 5px 13px rgba(202, 202, 202, 0.9), inset 1px 1px 2px rgba(246, 246, 246, 0.3), inset -1px -1px 2px rgba(202, 202, 202, 0.5);
+    box-shadow: -5px 5px 7px rgba(202, 202, 202, 0.2), 5px -5px 7px rgba(202, 202, 202, 0.2), -5px -5px 7px rgba(246, 246, 246, 0.9), 5px 5px 9px rgba(202, 202, 202, 0.9), inset 1px 1px 2px rgba(246, 246, 246, 0.3), inset -1px -1px 2px rgba(202, 202, 202, 0.5);
 
     position: sticky;
     left: 100vw;
@@ -28,6 +28,20 @@
     margin-top: -30px;
 }
 
+@media (max-width: 767px) {
+    .addTask.demo {
+        width: 64px;
+        height: 64px;
+    }
+}
+
+@media (max-width: 460px) {
+    .addTask.demo {
+        width: 60px;
+        height: 60px;
+    }
+}
+
 .addTask-absolute {
     display: flex;
     align-items: center;
@@ -38,7 +52,7 @@
     border-radius: 50%;
 
     background: #E0E0E0;
-    box-shadow: -5px 5px 10px rgba(202, 202, 202, 0.2), 5px -5px 10px rgba(202, 202, 202, 0.2), -5px -5px 10px rgba(246, 246, 246, 0.9), 5px 5px 13px rgba(202, 202, 202, 0.9), inset 1px 1px 2px rgba(246, 246, 246, 0.3), inset -1px -1px 2px rgba(202, 202, 202, 0.5);
+    box-shadow: -5px 5px 7px rgba(202, 202, 202, 0.2), 5px -5px 7px rgba(202, 202, 202, 0.2), -5px -5px 7px rgba(246, 246, 246, 0.9), 5px 5px 9px rgba(202, 202, 202, 0.9), inset 1px 1px 2px rgba(246, 246, 246, 0.3), inset -1px -1px 2px rgba(202, 202, 202, 0.5);
     cursor: pointer;
     transition: 0.4s;
 
@@ -74,6 +88,17 @@
     .addTask-absolute {
         width: 60px;
         height: 60px;
+    }
+}
+
+@media (max-width: 991px) {
+    .addTask-absolute.demo {
+        bottom: 90px;
+    }
+
+    .addTask-absolute {
+        width: 56px;
+        height: 56px;
     }
 }
 
@@ -129,6 +154,27 @@
     .addTask__plus {
         --size: 30px;
         --heightLine: 3.6px;
+    }
+}
+
+@media (max-width: 991px) {
+    .addTask__plus {
+        --size: 27px;
+        --heightLine: 3.4px;
+    }
+}
+
+@media (max-width: 767px) {
+    .addTask__plus {
+        --size: 30px;
+        --heightLine: 3.6px;
+    }
+}
+
+@media (max-width: 460px) {
+    .addTask__plus {
+        --size: 28px;
+        --heightLine: 3.4px;
     }
 }
 
