--- a/src/scss/components/_priority.scss
+++ b/src/scss/components/_priority.scss
@@ -18,8 +18,22 @@
 
 @media (max-width: 1399px) {
     .block__line-task {
-    margin-top: 17px;
-    margin-bottom: 6px;
+        margin-top: 17px;
+        margin-bottom: 6px;
+    }
+}
+
+@media (max-width: 991px) {
+    .block__line-task {
+        margin-top: 20px;
+        margin-bottom: 8px;
+    }
+}
+
+@media (max-width: 767px) {
+    .block__line-task {
+        margin-top: 16px;
+        margin-bottom: 4px;
     }
 }
 
@@ -99,6 +113,27 @@ li:first-child {
     }
 }
 
+@media (max-width: 991px) {
+    .block__button.task {
+        margin: 9px 0;
+        height: 23px; 
+    }
+}
+
+@media (max-width: 767px) {
+    .block__button.task {
+        margin: 10px 0;
+        height: 32px;
+    }
+}
+
+@media (max-width: 415px) {
+    .block__button.task {
+        margin: 8px 0;
+        height: 30px;
+    }
+}
+
 .block__button.submit {
     background-color: #7AD58E;
     box-shadow: -1px 1px 2px rgba(104, 183, 122, 0.2), 1px -1px 2px rgba(104, 183, 122, 0.2), -1px -1px 2px rgba(128, 223, 149, 0.9), 1px 1px 3px rgba(104, 183, 122, 0.9), inset 1px 1px 2px rgba(128, 223, 149, 0.3), inset -1px -1px 2px rgba(104, 183, 122, 0.5);
@@ -143,6 +178,38 @@ li:first-child {
         width: 165px;
         height: 44px;
         font-size: 24px;
+    }
+}
+
+@media (max-width: 991px) {
+    .block__button.demo {
+        width: 136px;
+        height: 36px;
+        font-size: 22px;
+    }
+}
+
+@media (max-width: 767px) {
+    .block__button.demo {
+        width: 155px;
+        height: 40px;
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 460px) {
+    .block__button.demo {
+        width: 140px;
+        height: 37px;
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 415px) {
+    .block__button.demo {
+        width: 125px;
+        height: 35px;
+        font-size: 18px;
     }
 }
 
@@ -219,7 +286,30 @@ li:first-child {
     color: #E1E1E1;
 }
 
+// .block__button_text.bottom {
+//     position: relative;
+//     bottom: 1px;
+// }
+
 @media (max-width: 1199px) {
+    .block__button_text {
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 991px) {
+    .block__button_text {
+        font-size: 13px;
+    }
+}
+
+@media (max-width: 767px) {
+    .block__button_text {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 415px) {
     .block__button_text {
         font-size: 15px;
     }
