--- a/src/scss/components/_loginForm.scss
+++ b/src/scss/components/_loginForm.scss
@@ -20,6 +20,12 @@
     width: 83%;
 }
 
+@media (max-width: 1199px) {
+    .form_container-modalWindow {
+        width: 80%;
+    }
+}
+
 .login__form_name {
     font-style: normal;
     font-weight: 500;
@@ -48,11 +54,41 @@
     border-radius: 16px;
 
     padding: 6px;
-    margin: 0 0 8px 0;
+    margin-bottom: 8px;
 }
 
-.form__input_holder.margin {
+@media (max-width: 1399px) {
+    .form__input_holder {
+        margin-bottom: 4px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .form__input_holder {
+        margin-bottom: 2px;
+    }
+}
+
+@media (max-width: 767px) {
+    .form__input_holder {
+        padding: 5px;
+    }
+}
+
+.form__input_holder.margin-form {
     margin-bottom: 30px;
+}
+
+@media (max-width: 991px) {
+    .form__input_holder.margin-form {
+        margin-bottom: 24px;
+    }
+}
+
+@media (max-width: 767px) {
+    .form__input_holder.margin-form {
+        margin-bottom: 22px;
+    }
 }
 
 .form__input_holder.error-holder {
@@ -80,6 +116,48 @@
     color: #918f8f;
 }
 
+@media (max-width: 1199px) {
+    .form__input {
+        font-size: 17.5px;
+    }
+    .form__input::placeholder {
+        font-size: 17.5px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .form__input.status {
+        height: 44px;
+    }
+}
+
+@media (max-width: 991px) {
+    .form__input {
+        font-size: 16.5px;
+    }
+    .form__input::placeholder {
+        font-size: 16.5px;
+    }
+}
+
+@media (max-width: 991px) {
+    .form__input.status {
+        height: 40px;
+    }
+}
+
+@media (max-width: 767px) {
+    .form__input.status {
+        height: 38px;
+    }
+}
+
+@media (max-width: 460px) {
+    .form__input.status {
+        height: 37px;
+    }
+}
+
 .form__input.error-input {
     background: #EC7676;
     box-shadow: 1px 1px 2px rgba(255, 130, 130, 0.3), -1px -1px 2px rgba(212, 106, 106, 0.5), inset -3px 3px 4px rgba(212, 106, 106, 0.2), inset 3px -3px 4px rgba(212, 106, 106, 0.2), inset -3px -3px 4px rgba(255, 130, 130, 0.9), inset 3px 3px 6px rgba(212, 106, 106, 0.9);
@@ -97,6 +175,18 @@
     font-size: 15px;
 }
 
+@media (max-width: 1199px) {
+    .error__message_text {
+        margin-top: 2px;
+    }
+}
+
+@media (max-width: 991px) {
+    .error__message_text {
+        margin-top: 3px;
+    }
+}
+
 .error__message_text.top {
     margin-top: -22px;
 }
@@ -106,29 +196,45 @@
     margin-top: 3px;
 }
 
+@media (max-width: 1199px) {
+    .error__message_text.tasks {
+        font-size: 10.5px;
+    }
+}
+
+@media (max-width: 767px) {
+    .error__message_text.tasks {
+        font-size: 11px;
+        margin-bottom: 1px;
+    }
+}
+
 .form__input.textarea {
     height: 120px;
     resize: none;
 }
 
+@media (max-width: 1199px) {
+    .form__input.textarea {
+        padding: 8px 13px 10px 13px;
+    }
+}
+
+@media (max-width: 767px) {
+    .form__input.textarea {
+        padding: 8px 11px 10px 11px;
+    }
+}
+
+@media (max-width: 415px) {
+    .form__input.textarea {
+        padding: 8px 9px 10px 9px;
+    }
+}
+
 .form__input-textarea::-webkit-scrollbar {
     width: 0;
 }
-
-// .form__input-textarea::-webkit-scrollbar-track {
-//     background: #d4d4d4;
-//     box-shadow: 0 0 2px rgba(0, 0, 0, .2) inset;
-//     border-radius: 20px;
-// }
-
-// .form__input-textarea::-webkit-scrollbar-thumb {
-//     background: #939393;
-//     border-radius: 8px;
-// }
-
-// .form__input-textarea::-webkit-scrollbar-thumb:hover {
-//     background: #7c7c7c;
-// }
 
 .login__form_remember {
     display: flex;
