prev value and error message

--- a/src/scss/components/_loginForm.scss
+++ b/src/scss/components/_loginForm.scss
@@ -136,6 +136,14 @@
     margin-top: 9px;
 }
 
+.error_info {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: -18px;
+    color: #EC7676;
+    font-size: 15px;
+}
+
 /*----toggle_noActive---- */
 .css-stmgjb {
     box-shadow: none !important;
