--- a/src/scss/components/_loginForm.scss
+++ b/src/scss/components/_loginForm.scss
@@ -11,9 +11,39 @@
     flex-direction: column;
 }
 
+@media (max-width: 1399px) {
+    .form {
+        width: 470px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .form {
+        width: 460px;
+    }
+}
+
+@media (max-width: 991px) {
+    .form {
+        width: 430px;
+    }
+}
+
+@media (max-width: 767px) {
+    .form {
+        width: 410px;
+    }
+}
+
 .form__container {
     width: 70%;
     height: auto;
+}
+
+@media (max-width: 991px) {
+    .form__container {
+        width: 75%;
+    }
 }
 
 .form_container-modalWindow {
@@ -36,6 +66,34 @@
     padding: 52px 0 45px;
 }
 
+@media (max-width: 1399px) {
+    .login__form_name {
+        font-size: 35px;
+        padding: 48px 0 40px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .login__form_name {
+        font-size: 34px;
+        padding: 44px 0 36px;
+    }
+}
+
+@media (max-width: 991px) {
+    .login__form_name {
+        font-size: 33px;
+        padding: 40px 0 32px;
+    }
+}
+
+@media (max-width: 767px) {
+    .login__form_name {
+        font-size: 32px;
+        padding: 36px 0 30px;
+    }
+}
+
 .login__form_data_name {
     font-style: normal;
     font-weight: 500;
@@ -44,6 +102,27 @@
     font-family: 'Roboto', sans-serif;
 
     margin: 22px 0 14px;
+}
+
+@media (max-width: 1399px) {
+    .login__form_data_name {
+        font-size: 19.5px;
+        margin: 20px 0 13px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .login__form_data_name {
+        font-size: 19px;
+        margin: 19px 0 13px;
+    }
+}
+
+@media (max-width: 991px) {
+    .login__form_data_name {
+        font-size: 18px;
+        margin: 18px 0 11px;
+    }
 }
 
 .form__input_holder {
@@ -119,6 +198,7 @@
 @media (max-width: 1199px) {
     .form__input {
         font-size: 17.5px;
+        height: 44px;
     }
     .form__input::placeholder {
         font-size: 17.5px;
@@ -134,6 +214,7 @@
 @media (max-width: 991px) {
     .form__input {
         font-size: 16.5px;
+        height: 42px;
     }
     .form__input::placeholder {
         font-size: 16.5px;
@@ -263,6 +344,22 @@
     width: 46px !important;
 }
 
+@media (max-width: 1199px) {
+    .css-1mngnt6 {
+        border: 2.3px solid #E0E0E0 !important;
+        height: 25px !important;
+        width: 44px !important;
+    }
+}
+
+@media (max-width: 767px) {
+    .css-1mngnt6 {
+        border: 2.3px solid #E0E0E0 !important;
+        height: 23px !important;
+        width: 42px !important;
+    }
+}
+
 .css-1mngnt6::after {
     background: #E0E0E0 !important;
     box-shadow: -1px 1px 1px rgba(202, 202, 202, 0.2), 1px -1px 1px rgba(202, 202, 202, 0.2), -1px -1px 1px rgba(246, 246, 246, 0.9), 1px 1px 1.5px rgba(202, 202, 202, 0.9), inset 1px 1px 1px rgba(246, 246, 246, 0.3), inset -1px -1px 1px rgba(202, 202, 202, 0.5) !important;
@@ -273,12 +370,48 @@
     height: 18px !important;
 }
 
+@media (max-width: 1199px) {
+    .css-1mngnt6::after {
+        top: 2.5px !important;
+        left: 3px !important;
+        width: 16px !important;
+        height: 16px !important;
+    }
+}
+
+@media (max-width: 767px) {
+    .css-1mngnt6::after {
+        top: 2.5px !important;
+        left: 3px !important;
+        width: 15px !important;
+        height: 15px !important;
+    }
+}
+
 .css-1mngnt6::before {
     background: #8A8383 !important;
     top: 9.5px !important;
     left: 9.5px !important;
     width: 4.5px !important;
     height: 4.5px !important;
+}
+
+@media (max-width: 1199px) {
+    .css-1mngnt6::before {
+        top: 8px !important;
+        left: 8.5px !important;
+        width: 4px !important;
+        height: 4px !important;
+    }
+}
+
+@media (max-width: 767px) {
+    .css-1mngnt6::before {
+        top: 8px !important;
+        left: 8.5px !important;
+        width: 3.5px !important;
+        height: 3.5px !important;
+    }
 }
 /*--------------------- */
 
@@ -292,6 +425,22 @@
     width: 46px !important;
 }
 
+@media (max-width: 1199px) {
+    .css-hqpog9 {
+        border: 2.3px solid #E0E0E0 !important;
+        height: 25px !important;
+        width: 44px !important;
+    }
+}
+
+@media (max-width: 767px) {
+    .css-hqpog9 {
+        border: 2.3px solid #E0E0E0 !important;
+        height: 23px !important;
+        width: 42px !important;
+    }
+}
+
 .css-hqpog9::after {
     background: #E0E0E0 !important;
     box-shadow: -1px 1px 1px rgba(202, 202, 202, 0.2), 1px -1px 1px rgba(202, 202, 202, 0.2), -1px -1px 1px rgba(246, 246, 246, 0.9), 1px 1px 1.5px rgba(202, 202, 202, 0.9), inset 1px 1px 1px rgba(246, 246, 246, 0.3), inset -1px -1px 1px rgba(202, 202, 202, 0.5) !important;
@@ -300,6 +449,24 @@
     left: 19.5px !important;
     width: 18px !important;
     height: 18px !important;
+}
+
+@media (max-width: 1199px) {
+    .css-hqpog9::after {
+        top: 2.5px !important;
+        left: 21px !important;
+        width: 16px !important;
+        height: 16px !important;
+    }
+}
+
+@media (max-width: 767px) {
+    .css-hqpog9::after {
+        top: 2.5px !important;
+        left: 21px !important;
+        width: 15px !important;
+        height: 15px !important;
+    }
 }
 
 .css-hqpog9::before {
@@ -311,6 +478,25 @@
     background: #FF9292 !important;
     box-shadow: -1px 1px 2px rgba(217, 124, 124, 0.2), 1px -1px 2px rgba(217, 124, 124, 0.2), -1px -1px 2px rgba(255, 168, 168, 0.9), 1px 1px 2.5px rgba(217, 124, 124, 0.9), inset 0.5px 0.5px 1px rgba(255, 168, 168, 0.3), inset -0.5px -0.5px 1px rgba(217, 124, 124, 0.5) !important;
 }
+
+@media (max-width: 1199px) {
+    .css-hqpog9::before {
+        top: 8px !important;
+        left: 26.5px !important;
+        width: 4px !important;
+        height: 4px !important;
+    }
+}
+
+@media (max-width: 767px) {
+    .css-hqpog9::before {
+        top: 8px !important;
+        left: 26.5px !important;
+        width: 3.5px !important;
+        height: 3.5px !important;
+    }
+}
+
 /*--------------------- */
 
 .login__form_remember_text {
@@ -322,6 +508,18 @@
     padding-left: 10px;
 }
 
+@media (max-width: 1199px) {
+    .login__form_remember_text {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 767px) {
+    .login__form_remember_text {
+        font-size: 13.5px;
+    }
+}
+
 .login__form_new {
     color: #8A8383;
     font-size: 15px;
@@ -331,8 +529,44 @@
     margin-bottom: 4px;  
 }
 
+@media (max-width: 1199px) {
+    .login__form_new {
+        font-size: 14px; 
+    }
+}
+
+@media (max-width: 767px) {
+    .login__form_new {
+        font-size: 13.5px; 
+    }
+}
+
 .login__form_new-mb {
     margin-bottom: 55px;
+}
+
+@media (max-width: 1399px) {
+    .login__form_new-mb {
+        margin-bottom: 50px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .login__form_new-mb {
+        margin-bottom: 46px;
+    }
+}
+
+@media (max-width: 991px) {
+    .login__form_new-mb {
+        margin-bottom: 44px;
+    }
+}
+
+@media (max-width: 767px) {
+    .login__form_new-mb {
+        margin-bottom: 40px;
+    }
 }
 
 .login__form_register {
@@ -340,6 +574,18 @@
     font-size: 15px;
     font-family: 'Roboto', sans-serif;
     font-weight: 400; 
+}
+
+@media (max-width: 1199px) {
+    .login__form_register {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 991px) {
+    .login__form_register {
+        font-size: 13.5px;
+    }
 }
 
 
