--- a/src/scss/components/_login.scss
+++ b/src/scss/components/_login.scss
@@ -24,8 +24,8 @@
     width: 45px;
     height: 45px;
     border-radius: 50%;
-    background-color: #74CB87;
-    border: 0.6px solid #8A8383;
+    background-color: #7AD58E;
+    box-shadow: -1px 1px 2px rgba(104, 183, 122, 0.2), 1px -1px 2px rgba(104, 183, 122, 0.2), -1px -1px 2px rgba(128, 223, 149, 0.9), 1px 1px 3px rgba(104, 183, 122, 0.9), inset 1px 1px 2px rgba(128, 223, 149, 0.3), inset -1px -1px 2px rgba(104, 183, 122, 0.5);
 }
 
 .login__user_leter {
