--- a/src/scss/components/_login.scss
+++ b/src/scss/components/_login.scss
@@ -16,6 +16,23 @@
     }
 }
 
+@media (max-width: 1399px) {
+    .login {
+        margin-bottom: -10px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .login {
+        width: 110px;
+        height: 60px;
+
+        margin-bottom: -17px;
+        margin-top: 25px;
+        padding: 0 13px 0 12px
+    }
+}
+
 .login__user_img {
     display: flex;
     justify-content: center;
@@ -28,6 +45,13 @@
     box-shadow: -1px 1px 2px rgba(104, 183, 122, 0.2), 1px -1px 2px rgba(104, 183, 122, 0.2), -1px -1px 2px rgba(128, 223, 149, 0.9), 1px 1px 3px rgba(104, 183, 122, 0.9), inset 1px 1px 2px rgba(128, 223, 149, 0.3), inset -1px -1px 2px rgba(104, 183, 122, 0.5);
 }
 
+@media (max-width: 1199px) {
+    .login__user_img {
+        width: 40px;
+        height: 40px;
+    }
+}
+
 .login__user_leter {
     color: #fff;
     font-size: 24px;
@@ -38,4 +62,11 @@
     width: 40px;
     height: 40px;
     cursor: pointer;
+}
+
+@media (max-width: 1199px) {
+    .login__icon {
+        width: 35px;
+        height: 35px;
+    }
 }
