--- a/src/scss/components/_selectChanges.scss
+++ b/src/scss/components/_selectChanges.scss
@@ -18,6 +18,7 @@
 
 @media (max-width: 767px) {
     .selectChanges {
+        bottom: 203px;
         width: 99px;
         height: 105px;
     }
@@ -25,6 +26,12 @@
 
 .selectChanges.demo {
     bottom: 175px;
+}
+
+@media (max-width: 767px) {
+    .selectChanges.demo {
+        bottom: 203px;
+    }
 }
 
 .selectChanges-absolute {
@@ -45,14 +52,26 @@
 }
 
 @media (max-width: 1399px) {
+    .selectChanges {
+        width: 114px;
+        height: 105px;    
+    }
+
     .selectChanges-absolute {
+        bottom: 98px;
         width: 114px;
         height: 105px;    
     }
 }
 
 @media (max-width: 1199px) {
+    .selectChanges {
+        width: 110px;
+        height: 103px;
+    }
+
     .selectChanges-absolute {
+        bottom: 93px;
         width: 110px;
         height: 103px;
     }
@@ -60,6 +79,7 @@
 
 @media (max-width: 991px) {
     .selectChanges-absolute {
+        bottom: 88px;
         width: 95px;
         height: 98px;
     }
@@ -67,6 +87,18 @@
 
 .selectChanges-absolute.demo {
     bottom: 162px;
+}
+
+@media (max-width: 1199px) {
+    .selectChanges-absolute.demo {
+    bottom: 155px;
+    }
+}
+
+@media (max-width: 991px) {
+    .selectChanges-absolute.demo {
+    bottom: 150px;
+    }
 }
 
 .selectChanges_task {
