--- a/src/scss/components/_static.scss
+++ b/src/scss/components/_static.scss
@@ -42,9 +42,23 @@
     font-style: normal;
     font-weight: 600;
     font-size: 38px;
-    line-height: 24px;
+    line-height: 1.3;
+    text-align: center;
     color: #B9ADAD;
 }
+
+@media (max-width: 1199px) {
+    .demo__text {
+        font-size: 36px;
+    }
+}
+
+@media (max-width: 991px) {
+    .demo__text {
+        font-size: 30px;
+    }
+}
+
 
 @media (max-width: 1399px) {
     .demo__description {
