--- a/src/scss/components/_registerForm.scss
+++ b/src/scss/components/_registerForm.scss
@@ -7,3 +7,52 @@
 
     padding: 52px 0 45px;
 }
+
+@media (max-width: 1399px) {
+    .register__form_name {
+        font-size: 35px;
+        padding: 48px 0 40px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .register__form_name {
+        font-size: 34px;
+        padding: 44px 0 38px;
+    }
+}
+
+@media (max-width: 991px) {
+    .register__form_name {
+        font-size: 33px;
+        padding: 40px 0 34px;
+    }
+}
+
+@media (max-width: 767px) {
+    .register__form_name {
+        font-size: 32px;
+        padding: 36px 0 32px;
+    }
+}
+
+@media (max-width: 540px) {
+    .register__form_name {
+        font-size: 31px;
+        padding: 32px 0 28px;
+    }
+}
+
+@media (max-width: 460px) {
+    .register__form_name {
+        font-size: 30px;
+        padding: 30px 0 26px;
+    }
+}
+
+@media (max-width: 415px) {
+    .register__form_name {
+        font-size: 29px;
+        padding: 28px 0 24px;
+    }
+}
