--- a/src/scss/components/_addTask.scss
+++ b/src/scss/components/_addTask.scss
@@ -14,12 +14,11 @@
     left: 100vw;
     bottom: 90px;
     cursor: pointer;
-    transition: 0.5s;
     margin-right: 15px;
     margin-top: -10px;
 
     &:hover {
-        background: #d6d4d4;
+        background: #dedcdc;
     }
 }
 
@@ -40,14 +39,13 @@
     background: #E0E0E0;
     box-shadow: -5px 5px 7px rgba(202, 202, 202, 0.2), 5px -5px 7px rgba(202, 202, 202, 0.2), -5px -5px 7px rgba(246, 246, 246, 0.9), 5px 5px 9px rgba(202, 202, 202, 0.9), inset 1px 1px 2px rgba(246, 246, 246, 0.3), inset -1px -1px 2px rgba(202, 202, 202, 0.5);
     cursor: pointer;
-    transition: 0.4s;
 
     position: absolute;
     right: 18px;
     bottom: 16px;
 
     &:hover {
-        background: #d6d4d4;
+        background: #dbdada;
     }
 }
 
