--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -328,6 +328,16 @@
     box-shadow: -2px 2px 2px rgba(195, 195, 195, 0.2), 2px -2px 2px rgba(195, 195, 195, 0.2), -2px -2px 2px rgba(239, 239, 239, 0.9), 2px 2px 2.5px rgba(195, 195, 195, 0.9), inset 1px 1px 1px rgba(239, 239, 239, 0.3), inset -1px -1px 1px rgba(195, 195, 195, 0.5);
 }
 
+.block__collapse {
+    opacity: 0;
+    transition: opacity 0.2s
+}
+
+.block__visible {
+    opacity: 1;
+    transition: opacity 0.2s
+}
+
 @media (max-width: 1399px) {
     .block__inner-editPan {
         margin-left: 90.5%;
