--- a/src/scss/components/_login.scss
+++ b/src/scss/components/_login.scss
@@ -41,8 +41,8 @@
     width: 45px;
     height: 45px;
     border-radius: 50%;
-    background-color: #7AD58E;
-    box-shadow: -1px 1px 2px rgba(104, 183, 122, 0.2), 1px -1px 2px rgba(104, 183, 122, 0.2), -1px -1px 2px rgba(128, 223, 149, 0.9), 1px 1px 3px rgba(104, 183, 122, 0.9), inset 1px 1px 2px rgba(128, 223, 149, 0.3), inset -1px -1px 2px rgba(104, 183, 122, 0.5);
+    background-color: #D9D9D9;
+    box-shadow: -3px 3px 7px rgba(195, 195, 195, 0.2), 3px -3px 7px rgba(195, 195, 195, 0.2), -3px -3px 7px rgba(239, 239, 239, 0.9), 3px 3px 10px rgba(195, 195, 195, 0.9), inset 1px 1px 2px rgba(239, 239, 239, 0.3), inset -1px -1px 2px rgba(195, 195, 195, 0.5);
 }
 
 @media (max-width: 1199px) {
@@ -53,20 +53,20 @@
 }
 
 .login__user_letter {
-    color: #fff;
-    font-size: 24px;
+    color: #8A8383;
+    font-size: 25px;
     font-weight: 600;
 }
 
 .login__icon {
-    width: 40px;
-    height: 40px;
+    width: 32px;
+    height: 32px;
     cursor: pointer;
 }
 
 @media (max-width: 1199px) {
     .login__icon {
-        width: 35px;
-        height: 35px;
+        width: 31px;
+        height: 31px;
     }
 }
