--- a/src/scss/components/_loginForm.scss
+++ b/src/scss/components/_loginForm.scss
@@ -205,6 +205,7 @@
 
 .form__input_holder {
     background: #E0E0E0;
+    position: relative;
 
     box-shadow: -3px 3px 4px rgba(199, 199, 199, 0.2), 3px -3px 4px rgba(199, 199, 199, 0.2), -3px -3px 4px rgba(249, 249, 249, 0.9), 3px 3px 6px rgba(199, 199, 199, 0.9), inset 1px 1px 2px rgba(249, 249, 249, 0.3), inset -1px -1px 2px rgba(199, 199, 199, 0.5);
 
@@ -265,6 +266,16 @@
     box-shadow: -3px 3px 4px rgba(212, 106, 106, 0.2), 3px -3px 4px rgba(212, 106, 106, 0.2), -3px -3px 4px rgba(255, 130, 130, 0.9), 3px 3px 6px rgba(212, 106, 106, 0.9), inset 1px 1px 2px rgba(255, 130, 130, 0.3), inset -1px -1px 2px rgba(212, 106, 106, 0.5);
 }
 
+.password-control {
+	position: absolute;
+	top: 20px;
+	right: 20px;
+	display: inline-block;
+	width: 23px;
+	height: 16px;
+    cursor: pointer;
+}
+
 .form__input {
     height: 47px;
     width: 100%;
@@ -285,6 +296,10 @@
     color: #918f8f;
 }
 
+.form__input.password {
+    padding: 9px 44px 11px 14px;
+}
+
 @media (max-width: 1199px) {
     .form__input {
         font-size: 17.5px;
@@ -297,6 +312,12 @@
 
     .form__input.status {
         height: 44px;
+    }
+
+    .password-control {
+        width: 22px;
+	    height: 15px;
+	    top: 19px;
     }
 }
 
@@ -313,6 +334,12 @@
     .form__input.status {
         height: 40px;
     }
+
+    .password-control {
+        width: 21px;
+	    height: 14px;
+	    top: 18px;
+    }
 }
 
 @media (max-width: 767px) {
@@ -322,6 +349,22 @@
 
     .form__input.status {
         height: 38px;
+    }
+
+    .password-control {
+	    top: 16px;
+    }
+}
+
+@media (max-width: 460px) {
+    .form__input.status {
+        height: 37px;
+    }
+
+    .password-control {
+        width: 19px;
+	    height: 12px;
+	    top: 17px;
     }
 }
 
@@ -334,13 +377,15 @@
     .form__input::placeholder {
         font-size: 15px;
     }
-}
 
-@media (max-width: 460px) {
-    .form__input.status {
-        height: 37px;
+    .password-control {
+        width: 18px;
+	    height: 11px;
+	    top: 16px;
     }
 }
+
+
 
 .form__input.error-input {
     background: #EC7676;
