started to do update profile logic

--- a/src/scss/components/_modalWindow.scss
+++ b/src/scss/components/_modalWindow.scss
@@ -119,6 +119,10 @@
     padding: 37px 0 27px;
 }
 
+.modalWindow__text.profile {
+    font-size: 34px;
+}
+
 @media (max-width: 1399px) {
     .modalWindow__text {
         font-size: 23px;
