--- a/src/scss/abstracts/_all.scss
+++ b/src/scss/abstracts/_all.scss
@@ -7,6 +7,8 @@
 @import '../components/error';
 @import '../components/static';
 @import '../components/selectChanges';
+@import '../components/settings';
+@import '../components/tasksLife';
 
 @import '../components/registerForm';
 @import '../components/line';
