--- a/src/scss/components/_tasksLife.scss
+++ b/src/scss/components/_tasksLife.scss
@@ -7,6 +7,25 @@
     font-family: 'Roboto', sans-serif;
 }
 
+@media (max-width: 1399px) {
+    .tasksLife__text {
+        margin-top: 14px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .tasksLife__text {
+        font-size: 17px;
+    }
+}
+
+@media (max-width: 991px) {
+    .tasksLife__text {
+        margin-top: 14px;
+        font-size: 17px;
+    }
+}
+
 .tasksLife__inner {
     width: 100%;
     height: 55px;
@@ -21,6 +40,24 @@
     align-items: center;
 }
 
+@media (max-width: 1399px) {
+    .tasksLife__inner {
+        height: 51px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .tasksLife__inner {
+        height: 49px;
+    }
+}
+
+@media (max-width: 991px) {
+    .tasksLife__inner {
+        height: 46px;
+    }
+}
+
 .tasksLife__inner.array {
     width: 100%;
     height: 124px;
@@ -28,6 +65,34 @@
 
     padding: 10px 0 10px 10px;
     margin-bottom: 25px;
+}
+
+@media (max-width: 1399px) {
+    .tasksLife__inner.array {
+        height: 118px;
+        margin-bottom: 23px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .tasksLife__inner.array {
+        height: 112px;
+        margin-bottom: 21px;
+    }
+}
+
+@media (max-width: 991px) {
+    .tasksLife__inner.array {
+        height: 107px;
+        margin-bottom: 21px;
+    }
+}
+
+@media (max-width: 767px) {
+    .tasksLife__inner.array {
+        height: 105px;
+        margin-bottom: 21px;
+    }
 }
 
 .tasksLife__inner_information {
@@ -53,10 +118,37 @@
     padding: 10px 0;
 }
 
+@media (max-width: 1199px) {
+    .tasksLife__inner_text {
+        font-size: 17px;
+    }
+}
+
 .tasksLife__inner_text.array {
     padding: 10px 0 3px 0;
     margin-bottom: 7px;
     cursor: pointer;
+}
+
+@media (max-width: 1199px) {
+    .tasksLife__inner_text.array {
+        padding: 7px 0 3px 0;
+        margin-bottom: 6px;
+    }
+}
+
+@media (max-width: 991px) {
+    .tasksLife__inner_text.array {
+        padding: 6px 0 3px 0;
+        margin-bottom: 6px;
+    }
+}
+
+@media (max-width: 767px) {
+    .tasksLife__inner_text.array {
+        padding: 6px 0 3px 0;
+        margin-bottom: 5px;
+    }
 }
 
 .tasksLife__inner_text.array:first-child {
@@ -81,6 +173,20 @@
 .tasksLife__inner_img {
     height: 10px;
     width: 15px;
+}
+
+@media (max-width: 1199px) {
+    .tasksLife__inner_img {
+        height: 9px;
+        width: 14px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .tasksLife__inner_img {
+        height: 8px;
+        width: 13px;
+    }
 }
 
 //--------------------------//
