--- a/src/scss/abstracts/_all.scss
+++ b/src/scss/abstracts/_all.scss
@@ -6,10 +6,11 @@
 @import '../components/modalWindow';
 @import '../components/error';
 @import '../components/static';
-@import '../components/selectChanges';
+@import '../components/statusName';
 
 @import '../components/registerForm';
 @import '../components/line';
+
 
 
 
