--- a/src/scss/components/_priority.scss
+++ b/src/scss/components/_priority.scss
@@ -72,9 +72,9 @@
     }
 }
 
-li:first-child {
-    margin-top: -3px;
-}
+// li:first-child {
+//     margin-top: -3px;
+// }
 
 .block__button {
     display: flex;
