--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -20,7 +20,7 @@
 }
 
 .block {
-    padding: 30px 28px 16px 28px;
+    padding: 25px 28px 16px 28px;
     position: relative;
 }
 
@@ -53,17 +53,20 @@
     margin-bottom: 37px;
 }
 
+
 @media (max-width: 1399px) {
     .row-padding {
         padding: 0 22px;
     }
 }
 
+
 @media (max-width: 1199px) {
     .row-padding {
         padding: 0 20px;
     }
 }
+
 
 @media (max-width: 767px) {
     .row-padding {
@@ -89,10 +92,7 @@
     }
 }
 
-.block__wrapper {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
+
 
 .block__name {
     display: flex;
@@ -104,64 +104,117 @@
     color: #8A8383;
 }
 
-.block__status-inner {
+
+
+
+
+.block__edit {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: space-between;
+
+    margin-right: -22px;
 }
 
-.block__status_name {
-    margin: 0px 10px 30px 0px;
-    font-family: 'Roboto';
-    font-weight: 500;
-    font-size: 45px;
-    color: #8A8383;
+.block__edit_center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-@media (max-width: 1399px) {
-    .block__status_name {
-        font-size: 40px;
-    }
-}
+.block__plus {
+    width: 20px;
+    height: 20px;
+    background-color: #80E095;
+    margin-bottom: 24px;
+    border-radius: 50%;
+    cursor: pointer;
+    border: none;
+    padding: 0;
 
-@media (max-width: 1199px) {
-    .block__status_name {
-        font-size: 37px;
-    }
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    box-shadow: -0.5px 0.5px 1px rgba(110, 192, 128, 0.2), 0.5px -0.5px 1px rgba(110, 192, 128, 0.2), -0.5px -0.5px 1px rgba(134, 234, 156, 0.9), 0.5px 0.5px 2px rgba(110, 192, 128, 0.9), inset 0.5px 0.5px 1px rgba(134, 234, 156, 0.3), inset -0.5px -0.5px 1px rgba(110, 192, 128, 0.5);
 }
 
 @media (max-width: 991px) {
-    .block__status_name {
-        font-size: 29px;
-        margin: 0px 10px 22px 0px;
+    .block__plus {
+        width: 17px;
+        height: 17px;
+        margin-bottom: 17px;
     }
 }
 
 @media (max-width: 767px) {
-    .block__status_name {
-        font-size: 36px;
-        margin: 0px 10px 22px 0px;
+    .block__plus {
+        width: 19px;
+        height: 19px;
+        margin-bottom: 17px;
     }
 }
 
 @media (max-width: 460px) {
-    .block__status_name {
-        font-size: 34px;
-        margin: 0px 10px 16px 0px;
+    .block__plus {
+        margin-bottom: 10px;
     }
 }
 
-@media (max-width: 415px) {
-    .block__status_name {
-        font-size: 33px;
-        margin: 0px 10px 16px 0px;
-    }
+.block__plus.collapse {
+    opacity: 0;
+    transition: opacity 1s
 }
+
+.block__plus.visible {
+    opacity: 1;
+    transition: opacity 1s
+}
+
+.block__plus.left {
+    margin-left: -9px;
+}
+
+.block__plus.right {
+    margin-right: 9px;
+}
+
+.block__plus-line {
+    position: relative;
+    width: 10px;
+    height: 2px;;
+    background-color: #fff;
+    border-radius: 3px;
+  }
+
+  .block__plus-line::before {
+    content: "";
+    position:absolute;
+    background:#fff;
+
+    left:50%;
+    top:4px;
+    bottom:4px;
+    width:2px;
+    transform:translateX(-50%);
+  }
+  
+  .block__plus-line::after {
+    content: "";
+    position:absolute;
+    background:#fff;
+
+    top:50%;
+    left:4px;
+    right:4px;
+    height:10px;
+    transform:translateY(-50%);
+  }
 
 .block__minus {
     width: 20px;
     height: 20px;
-    background-color: #D9D9D9;
+    background-color: #F45252;
     margin-bottom: 25px;
     border-radius: 50%;
     cursor: pointer;
@@ -172,7 +225,11 @@
     align-items: center;
     justify-content: center;
 
-    box-shadow: -2px 2px 2px rgba(195, 195, 195, 0.2), 2px -2px 2px rgba(195, 195, 195, 0.2), -2px -2px 2px rgba(239, 239, 239, 0.9), 2px 2px 2.5px rgba(195, 195, 195, 0.9), inset 1px 1px 1px rgba(239, 239, 239, 0.3), inset -1px -1px 1px rgba(195, 195, 195, 0.5);
+    box-shadow: -0.5px 0.5px 1px rgba(209, 70, 70, 0.2), 0.5px -0.5px 1px rgba(209, 70, 70, 0.2), -0.5px -0.5px 1px rgba(255, 86, 86, 0.9), 0.5px 0.5px 2px rgba(209, 70, 70, 0.9), inset 0.5px 0.5px 1px rgba(255, 86, 86, 0.3), inset -0.5px -0.5px 1px rgba(209, 70, 70, 0.5);
+}
+
+.block__minus.left {
+    margin-left: 0 auto;
 }
 
 @media (max-width: 1399px) {
@@ -208,8 +265,8 @@
 
 .block__minus-line {
     width: 10px;
-    height: 2.5px;
-    background-color: #9d9a9a;
+    height: 2px;
+    background-color: #fff;
     border-radius: 2px;
 }
 
