--- a/src/scss/components/_statusName.scss
+++ b/src/scss/components/_statusName.scss
@@ -10,12 +10,14 @@
 }
 
 .block__status_name {
-    margin: 0px 10px 25px 0px;
+    margin: 0px 10px 25px 35px;
+    padding-bottom: 2px;
     font-family: 'Roboto';
     font-weight: 500;
     font-size: 41px;
     color: #8A8383;
     overflow: hidden; /* Обрезаем содержимое */
+    transition: margin .1s linear;
 }
 
 @media (max-width: 1399px) {
@@ -25,6 +27,7 @@
 
     .block__status_name {
         font-size: 35px;
+        margin: 0px 10px 21px 35px;
     }
 }
 
@@ -89,19 +92,25 @@
     }
 }
 
-
-.block__status_eddit {
+.block__status_edit {
     width: 100%;
     height: 54px;
-    margin-bottom: 12px;
+    margin: -7px 0 21px 0;
+    padding: 2px;
+
     background: linear-gradient(135deg, #E4E4E4 0%, #CECECE 100%);
     box-shadow: -2px 2px 5px rgba(195, 195, 195, 0.2), 2px -2px 5px rgba(195, 195, 195, 0.2), -2px -2px 5px rgba(239, 239, 239, 0.9), 2px 2px 10px rgba(195, 195, 195, 0.9), inset 1px 1px 2px rgba(239, 239, 239, 0.3), inset -1px -1px 2px rgba(195, 195, 195, 0.5);
     border-radius: 8px;
-    padding: 5px;
-    margin-right: 18px;
 }
 
-.eddit__inner {
+@media (max-width: 1399px) {
+    .block__status_edit {
+        height: 50px;
+        margin: -8px 0 16px 0;
+    }
+}
+
+.edit__inner {
     width: 100%;
     height: 100%;
     border-radius: 8px;
@@ -112,18 +121,10 @@
     justify-content: center;
 }
 
-.eddit__inner_block {
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    z-index: 10;
-}
-
-.eddit__inner_input {
-    width: 88%;
+.edit__inner_input {
+    width: 100%;
     height: 100%;
+    padding: 4px 3px 2px 3px;
 
     background: #E0E0E0;
     box-shadow: 1px 1px 2px rgba(246, 246, 246, 0.3), -1px -1px 2px rgba(202, 202, 202, 0.5), inset -3px 3px 6px rgba(202, 202, 202, 0.2), inset 3px -3px 6px rgba(202, 202, 202, 0.2), inset -3px -3px 6px rgba(246, 246, 246, 0.9), inset 3px 3px 8px rgba(202, 202, 202, 0.9);
@@ -133,17 +134,25 @@
     border: 0;
     font-family: inherit;
     font-size: inherit;
-    line-height: inherit;
     margin: 0;
+    box-sizing: border-box;
 
-    padding: 7px 11px 4px 14px;
     font-weight: 500;
-    font-size: 27px;
-    color: #918f8f;
+    font-size: 40px;
+    color: #8A8383;
     text-align: center;
+    font-family: 'Roboto';
+
+    line-height: normal;
 }
 
-.eddit__inner_btn {
+@media (max-width: 1399px) {
+    .edit__inner_input {
+        font-size: 34px;
+    }
+}
+
+.edit__inner_btn {
     padding: 9px;
     margin: 5px;
     cursor: pointer;
@@ -151,16 +160,16 @@
     background: #80E095;
 }
 
-.eddit__inner_btn.red {
+.edit__inner_btn.red {
     background: #F45252;
 }
 
-.eddit__photo {
+.edit__photo {
     width: 15px;
     height: 14px;
 }
 
-.eddit__inner_content {
+.edit__inner_content {
     display: flex;
     justify-content: center;
     align-items: center;
